# sansshell

./: .gitignore  Cargo.toml  build.rs  go.mod  go.sum  tools.go
auth/mtls/: client.go  mtls.go  server.go
auth/mtls/fingerprint/: fingerprint.go
auth/opa/: opa.go
auth/opa/rpcauth/: rpcauth.go  rpcauth_test.go
cmd/proxy-server/: main.go
cmd/proxy-server/server/: server.go
cmd/sanssh/: main.go
cmd/sansshell-server/: default-policy.rego  main.go
cmd/sansshell-server/server/: server.go
cmd/util/: util.go
proxy/: proxy.pb.go  proxy.proto  proxy_grpc.pb.go
proxy/certfetcher/: certfetcher.go  certfetcher.pb.go  certfetcher.proto  certfetcher_grpc.pb.go
proxy/proxy/: proxy.go
proxy/server/: server.go  target.go  target_test.go
server/: server.go  server_test.go
services/dns/server/: dns.go
services/fdb/server/: fdbmovedata.go
services/localfile/server/: localfile.go
services/process/server/: process.go
services/psql/: psql.go  psql.pb.go  psql.proto  psql_grpc.pb.go  psql_grpcproxy.pb.go
services/psql/client/: psql.go
services/psql/server/: connection.go  psql.go
services/sansshell/server/: logging.go  server.go
services/service/server/: server_linux.go
services/tlsinfo/server/: server.go
services/util/: util.go
src/sansshell-server/: server.rs
src/services/healthcheck/: mod.rs
telemetry/: telemetry.go  telemetry_test.go
telemetry/metrics/: otel.go
