[package]
name = "sansshell"
version = "0.0.0"
authors = ["Steven Rhodes <rhodes.steven@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "sansshell-server rust implementation"
edition = "2021"

[[bin]]
name = "sansshell-server"
path = "src/sansshell-server/server.rs"

[dependencies]
prost = "0.13.2"
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.2", features = ["tls"] }

[build-dependencies]
tonic-build = "0.12.2"
